add save chr button to nes sprite editor

--- a/nes-sprite-editor/index.html
+++ b/nes-sprite-editor/index.html
@@ -139,6 +139,7 @@
             <label for="nesfilename">NES Sprite Name</label>
             <input  id="nesfilename" type="text" />
             <button id="nes">Save NES</button>
+            <button id="chr">Save CHR</button>
             <br>
             
             <button id="image">Save PNG</button>
