--- a/nes-sprite-editor/index.html
+++ b/nes-sprite-editor/index.html
@@ -12,20 +12,37 @@
                 </div>
             </div>
             <div id="palette">
-                <div id="brush" class="color">BRUSH</div>
-                <div id="palette-current" class="no-select">
-                    <div id="background" class="color selectable" data-palette="background"> BKG </div>
-                    <div id="color1" class="color selectable" data-palette="color1"> CL1 
-                        <div></div>
+                <div style="display: flex; align-items: flex-start;">
+                    <!-- <div style="margin-right: 15px;"> -->
+                        <div id="brush" class="color" style="margin-right: 15px;">BRUSH</div>
+                        <div id="palette-current" class="no-select" style="display: grid; grid-template-columns: 1fr 1fr; gap: 5px; margin-right: 15px;">
+                            <div id="background" class="color selectable" data-palette="background"> BKG </div>
+                            <div id="color1" class="color selectable" data-palette="color1"> CL1 
+                                <div></div>
+                            </div>
+                            <div id="color2" class="color selectable" data-palette="color2"> CL2 
+                                <div></div>
+                            </div>
+                            <div id="color3" class="color selectable" data-palette="color3"> CL3 
+                                <div></div>
+                            </div>
+                        </div>
+                    <!-- </div> -->
+                     <div>
+                        <pre style="font-size: 12px; margin-left: 0px;">
+$3F00    universal bg color
+$3F01-$3F03    bg palette 0
+$3F05-$3F07    bg palette 1
+$3F09-$3F0B    bg palette 2
+$3F0D-$3F0F    bg palette 3
+$3F11-$3F13    sprite palette 0
+$3F15-$3F17    sprite palette 1
+$3F19-$3F1B    sprite palette 2
+$3F1D-$3F1F    sprite palette 3
+                        </pre> 
                     </div>
-                    <div id="color2" class="color selectable" data-palette="color2"> CL2 
-                        <div></div>
-                    </div>
-                    <div id="color3" class="color selectable" data-palette="color3"> CL3 
-                        <div></div>
-                    </div>
+   
                 </div>
-                
 
                 <table border="1" cellpadding="5">
                 <tbody class="palette-selection" class="selectable">
@@ -134,28 +151,15 @@
 
             <label for="nesfile">Upload</label>
             <input type="file" id="nesfile" name="nesfile" />
-            <br>
+            <button id="new">New sprite sheet</button>
+            <br/>
 
             <label for="nesfilename">NES Sprite Name</label>
             <input  id="nesfilename" type="text" />
+            <br/>
             <button id="nes">Save NES</button>
             <button id="chr">Save CHR</button>
-            <br>
-            
             <button id="image">Save PNG</button>
-            <button id="new">New sprite sheet</button>
-            <hr>
-            <pre>
-                $3F00	Universal background color
-                $3F01-$3F03	Background palette 0
-                $3F05-$3F07	Background palette 1
-                $3F09-$3F0B	Background palette 2
-                $3F0D-$3F0F	Background palette 3
-                $3F11-$3F13	Sprite palette 0
-                $3F15-$3F17	Sprite palette 1
-                $3F19-$3F1B	Sprite palette 2
-                $3F1D-$3F1F	Sprite palette 3
-            </pre>
         </div>
         <script src="main.js"></script>
     </body>
